# PDVPOOAV2

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  styles.module.scss
migrations/: env.py
migrations/versions/: 0a9343faac8c_tabela_clientes.py  29724907d252_tabela_despesas.py  8cffad126824_tabela_usuarios.py  db3fa884894d_tabela_fornecedores.py  f52390d324e2_create_categorias_e_produtos.py
pdv/: __init__.py  app.py  database.py  main.py  models.py  schemas.py  settings.py  stock.py
pdv/modules/: __init__.py  pdv.py
pdv/modules/admin/: Administrador.py
pdv/modules/autenticador/: Autenticador.py
pdv/modules/descontos/: DescontoItem.py  DescontoTotal.py
pdv/modules/estados/: estado_finalizando_pedido.py  estado_inicial.py  estado_pedido_em_andamento.py
pdv/modules/fiado/: gerenciadorClientes.py
pdv/modules/formas_pagamento/: PagamentoCartaoCredito.py  PagamentoCartaoDebito.py  PagamentoDinheiro.py  PagamentoFiado.py  PagamentoPix.py
pdv/modules/interfaces/: desconto.py  estados_pdv.py  forma_pagamento.py  pagamento.py  relatorios.py
pdv/modules/models/: Categoria.py  ClienteEspecial.py  ClientesFiado.py  Compra.py  Despesa.py  Fornecedor.py  ItemPedido.py  Pedido.py  (+1 more)
pdv/requirements_documentation/: cartoes_requisitos.md  diferenciais.txt  requisitos.md
pdv/routers/: __init__.py  categorias.py  clientes.py  despesas.py  fornecedores.py  produtos.py  usuarios.py
tests/: __init__.py  conftest.py  test_db.py  test_stock.py
(+13 files in other folders)
